--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,23 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/frontend-source/node_modules
-/frontend-source/.pnp
-/frontend-source/.pnp.js
+/frontend/node_modules
+/frontend/.pnp
+/frontend/.pnp.js
 
 # testing
-/frontend-source/coverage
+/frontend/coverage
 
 # production
-/frontend-source/build
+/frontend/build
 
 # misc
-/frontend-source/.DS_Store
-/frontend-source/.env.local
-/frontend-source/.env.development.local
-/frontend-source/.env.test.local
-/frontend-source/.env.production.local
+/frontend/.DS_Store
+/frontend/.env.local
+/frontend/.env.development.local
+/frontend/.env.test.local
+/frontend/.env.production.local
 
-/frontend-source/npm-debug.log*
-/frontend-source/yarn-debug.log*
-/frontend-source/yarn-error.log*
+/frontend/npm-debug.log*
+/frontend/yarn-debug.log*
+/frontend/yarn-error.log*
